# openxr

./: .clang-format  .gitignore
Chapter2/: CMakeLists.txt  build.gradle  main.cpp
Chapter2/app/src/main/: AndroidManifest.xml
Chapter2/app/src/main/assets/shaders/: PixelShader.spv  VertexShader.spv
